--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,6 @@ name: CI
 
 on: [push]
 
-env:
-  DEPLOY_PATH: ~/public_html
-  BUILD_SCRIPT_OUTPUT: .next
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,15 +12,19 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14'
-        
+
       # Устанавливаем зависимости для сборки
       - name: Install Dependencies
         run: npm i
-        
+
       # Собираем приложение
       - name: Build Appliction
         run: npm run build
-        
+
+      # Собираем приложение
+      - name: Generate static files
+        run: npm run static-generate
+
       # Доставляем собранное приложение на сервер
       - name: Deploy to Server
         uses: appleboy/scp-action@master
@@ -33,6 +33,6 @@ jobs:
           port: ${{ secrets.DEPLOY_SERVER_PORT }}
           username: ${{ secrets.DEPLOY_SERVER_USERNAME }}
           key: ${{ secrets.DEPLOY_SERVER_KEY }}
-          source: ${{ env.BUILD_SCRIPT_OUTPUT }}
-          target: ${{ env.DEPLOY_PATH }}/${{ env.BRANCH_NAME }}
+          source: static
+          target: ~/public_html
           strip_components: 1
