--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "static-generate": "next export -o static"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
