--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "static-generate": "next export -o static"
+    "static-generate": "next export -o _static"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
