--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@svgr/webpack": "^5.5.0",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "date-fns": "^2.20.1",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
