--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "static-generate": "next export -o _static"
   },
   "dependencies": {
+    "@editorjs/delimiter": "^1.2.0",
+    "@editorjs/editorjs": "^2.20.2",
+    "@editorjs/header": "^2.6.1",
+    "@editorjs/image": "^2.6.0",
+    "@editorjs/list": "^1.6.2",
+    "@editorjs/paragraph": "^2.8.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.5.1",
@@ -16,9 +22,12 @@
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.20.1",
+    "editorjs-html": "^3.0.5",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-editor-js": "^1.9.0",
+    "react-html-parser": "^2.0.2",
     "sass": "^1.32.8"
   },
   "devDependencies": {
