--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "static-generate": "next export -o _static"
   },
   "dependencies": {
+    "@editorjs/code": "^2.7.0",
+    "@editorjs/editorjs": "^2.22.0",
+    "@editorjs/header": "^2.6.1",
+    "@editorjs/image": "^2.6.0",
+    "@editorjs/list": "^1.6.2",
+    "@editorjs/quote": "^2.4.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.5.1",
