--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.12.1",
     "sass": "^1.32.8"
   },
   "devDependencies": {
