--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "static-generate": "next export -o _static"
   },
+  "engines": {
+    "node": "14.17.5"
+  },
   "dependencies": {
     "@editorjs/code": "^2.7.0",
     "@editorjs/delimiter": "^1.2.0",
