--- a/package.json
+++ b/package.json
@@ -33,14 +33,18 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.20.1",
     "form-data": "^4.0.0",
+    "laravel-echo": "^1.11.3",
+    "laravel-echo-server": "^1.6.2",
     "next": "10.0.9",
     "next-images": "^1.8.1",
     "next-redux-wrapper": "^7.0.5",
+    "pusher-js": "^7.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.12.1",
     "react-redux": "^7.2.5",
     "sass": "^1.32.8",
+    "socket.io": "2.4.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
